# http-server-rs

./: Cargo.toml  README.md  your_program.sh
src/: headers.rs  http_request.rs  http_response.rs  http_server.rs  http_status_code.rs  lib.rs  main.rs
