[package]
name = "http_server_rs"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.93"                                   # error handling
bytes = "1.8.0"                                     # helps manage buffers
thiserror = "2.0.3"                                # error handling
tokio = { version = "1.41.1", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.13.0"                                # General iterator helpers

[dev-dependencies]
pretty_assertions = "1.4.1"                         # nicer looking assertions