[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.92"                                   # error handling
bytes = "1.8.0"                                     # helps manage buffers
thiserror = "1.0.66"                                # error handling
tokio = { version = "1.41.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.13.0"                                # General iterator helpers

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions